--- a/assets/css/lonin.css
+++ b/assets/css/lonin.css
@@ -17,3 +17,39 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.xbg-box {
+    height: 70px;
+    background: url(/assets/images/login_title.png)no-repeat center;
+}
+
+.form-boxb {
+    display: none;
+}
+
+.layui-form {
+    padding: 0 30px;
+}
+
+.links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.links a {
+    font-size: 12px;
+}
+
+.layui-form-item {
+    position: relative;
+}
+
+.layui-icon {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.layui-input {
+    padding-left: 34px;
+}
